--- a/main.html
+++ b/main.html
@@ -10,7 +10,10 @@
 </head>
 <body>
 <h1>Karnaugh Map Solver</h1>
-<div id="myname">By MD NADIM AHMED</div>
+<div id="myname">
+	By MD NADIM AHMED<br>
+	To view this project on github click <a href="https://github.com/mnahm5/Karnaugh-Map-Solver">here</a>
+</div>
 <!-- Sum of Products Notation Button trigger modal -->
 <button type="button" class="col-lg-offset-4 col-lg-4 col-xs-offset-2 col-xs-8 btn btn-primary btn-lg" data-toggle="modal" data-target="#SOP">
 	Sum of Products Notation
